# rori-stack

./: .gitignore  README.md  docker-compose.yml  make-init.sh  make-user.sh  make.sh
admin/: .env.sample  .gitignore  README.md  docker-compose.yml
applicationA/: docker-compose.yml
applicationB/: docker-compose.yml
docs/drawio/: structure.drawio
ec3/: Dockerfile  README.md  docker-compose.yml  ssh.sh
ec3/centos/: Dockerfile
ec3/ubuntu/: Dockerfile
nginx-proxy/: Dockerfile  README.md  docker-compose.yml  nginx.tmpl
nginx-proxy/conf.d/: default.conf
nginx-proxy/html/: 502.html  503.html
nginx-proxy/html/custom_pages/: 502.html  503.html
secure/: .env.sample  README.md  docker-compose.yml
secure/app/: Dockerfile
secure/app/rori-stack-secure/: pyproject.toml
secure/app/rori-stack-secure/rori_stack_secure/: main.py
secure/app/rori-stack-secure/rori_stack_secure/shell/: make-user.sh  rm-container.sh
secure/app/rori-stack-secure/tests/: test_rori_stack_secure.py
server/: README.md  docker-compose.yml
server/apache/: Dockerfile
server/apache/html/: index.php
server/mysql/: Dockerfile
share-volume/: README.md
share-volume/ec3/: add-user.sh
share-volume/ssh-server/: .gitignore  banner_msg.txt  init.sh  set-first-cmd.sh  ssh-key-register.sh
ssh-server/: .env.sample  README.md  docker-compose.yml
ssh-server/src/: Dockerfile
