[tool.poetry]
name = "rori-stack-secure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "rori_stack_secure" },
    { include = "rori_stack_secure/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
docker = "^5.0.3"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
